--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "@types/node": "^16.18.16",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "bootstrap": "^5.2.3",
+    "child_process": "^1.0.2",
     "electron-is-dev": "^2.0.0",
+    "execSync": "^1.0.2",
+    "os-browserify": "^0.3.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "run-applescript": "^6.1.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -28,7 +34,11 @@
         "default"
       ]
     },
-    "extraResources": ["./resources/**"],
+    "extraResources": [
+      {
+        "from": "./public/script"
+      }
+    ],
     "dmg": {
       "title": "tournant"
     },
