--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.2.3",
     "child_process": "^1.0.2",
     "electron-is-dev": "^2.0.0",
+    "electron-store": "^8.1.0",
     "execSync": "^1.0.2",
     "os-browserify": "^0.3.0",
     "react": "^18.2.0",
