이름 변경, x64 빌드

--- a/package.json
+++ b/package.json
@@ -27,13 +27,17 @@
   "main": "public/electron.js",
   "homepage": "./",
   "build": {
-    "productName": "cutter",
+    "productName": "Paragraph Cutter",
     "appId": "cutter",
     "asar": true,
     "mac": {
-      "target": [
-        "default"
-      ]
+      "target": {
+        "target": "dmg",
+        "arch": [
+          "x64",
+          "arm64"
+        ]
+      }
     },
     "extraResources": [
       {
