--- a/package.json
+++ b/package.json
@@ -31,9 +31,13 @@
     "appId": "cutter",
     "asar": true,
     "mac": {
-      "target": [
-        "default"
-      ]
+      "target": {
+        "target": "dmg",
+        "arch": [
+          "x64",
+          "arm64"
+        ]
+      }
     },
     "extraResources": [
       {
