--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
           "x64",
           "arm64"
         ]
-      }
+      },
+      "icon": "./public/icon.png"
     },
     "extraResources": [
       {
