--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "electron-is-dev": "^2.0.0",
     "electron-store": "^8.1.0",
     "execSync": "^1.0.2",
+    "jest": "^29.5.0",
     "os-browserify": "^0.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
@@ -85,7 +86,8 @@
     "start": "concurrently \"cross-env NODE_ENV=development BROWSER=none yarn react-start\" \"wait-on http://localhost:3000 && electron .\"",
     "build": "yarn react-build && electron-builder",
     "release": "yarn react-build && electron-builder --publish=always",
-    "build:osx": "npm run build -- --mac"
+    "build:osx": "npm run build -- --mac",
+    "test": "jest"
   },
   "eslintConfig": {
     "extends": [
